<resources>
    <string name="app_name">NavigationSample</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_details">Details</string>
    <string name="title_settings">Settings</string>
    <string name="title_private">Private</string>
    <string name="title_group">Group</string>
    <string name="open_messenger">Open messenger</string>
    <string name="id">Id:</string>
    <string name="from">From:</string>
    <string name="message">Message:</string>
    <string name="date">Date:</string>
</resources>
